<resources>
    <string name="app_name">JZVD</string>

    <string name="menu_home">首页</string>

    <string name="menu_talk">留言</string>

    <string name="menu_hot">热点</string>

    <string name="menu_me">我的</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_main">MainActivity</string>
</resources>
