<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/line_view"
        />
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@color/menu_bgcolor"
        >
        <!-- 首页 -->
        <LinearLayout 
            android:id="@+id/ll_menu_home"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
	    	android:orientation="vertical"
		    android:gravity="center"
		    android:padding="5dp"
		    android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_home" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:background="@drawable/menu_home"
                android:contentDescription="@string/app_name"/>
            <TextView 
                android:id="@+id/tv_menu_home"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:text="@string/menu_home"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!-- 热点 -->
        <LinearLayout 
            android:id="@+id/ll_menu_hot"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
	    	android:orientation="vertical"
		    android:padding="5dp"
		    android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_hot" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:background="@drawable/menu_hot"
                android:contentDescription="@string/app_name"/>
            <TextView 
                android:id="@+id/tv_menu_hot"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:text="@string/menu_hot"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!-- 发言 -->
        <LinearLayout 
            android:id="@+id/ll_menu_talk"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
	    	android:orientation="vertical"
		    android:padding="5dp"
		    android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_talk" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:background="@drawable/menu_talk"
                android:contentDescription="@string/app_name"/>
            <TextView 
                android:id="@+id/tv_menu_talk"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:text="@string/menu_talk"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!-- 我的 -->
        <LinearLayout 
            android:id="@+id/ll_menu_me"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
	    	android:orientation="vertical"
		    android:padding="5dp"
		    android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_me" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:background="@drawable/menu_me"
                android:contentDescription="@string/app_name"
                />
            <TextView 
                android:id="@+id/tv_menu_me"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:text="@string/menu_me"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>